feat(nvim): move to oled

--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -1,45 +1,15 @@
-# source = ~/.config/hypr/myColors.conf
-
-#################
-###  Plugins  ###
-#################
-
-# exec-once = hyprpm enable Hyprspace
-# plugin {
-#     overview {
-#         # hideTopLayers = 0
-#         # hideRealLayers = 0
-#         # hideOverlayLayers = 0
-#         # affectStrut = 0
-#         # overrideGaps = 1
-#         # showEmptyWorkspace = 0
-#         # showSpecialWorkspace = 0
-#         # exitOnSwitch = 1
-#     }
-# }
-
-# exec-once = hyprpm reload -n
-exec-once = hyprpm enable split-monitor-workspaces
-plugin {
-    split-monitor-workspaces {
-        count = 10
-        keep_focused = 1
-        enable_notifications = 0
-        enable_persistent_workspaces = 1
-    }
-}
-
 #################
 ### AUTOSTART ###
 #################
-exec-once = ags &
-exec-once = mkfifo /tmp/wobpipe && tail -f /tmp/wobpipe | wob &
-exec-once = ianny & # take breaks
-exec-once = swww-daemon &
-exec-once = systemctl --user start wallpaper_timer.service
 exec-once = zen-browser &
+
+# exec-once = ags &
+# exec-once = systemctl --user start wallpaper_timer.service
+exec-once = mkfifo /tmp/wobpipe && tail -f /tmp/wobpipe | wob &
 exec-once = wlsunset -l 49.87 -L 8.65 &
-# exec-once = hypridle &
+exec-once = swww-daemon &
+
+exec-once = hypridle &
 exec-once = (pkill hyprdim; sleep 2 && hyprdim --duration 500 --strength 0.6) &
 exec-once = hyprctl setcursor phinger-cursors-light 48 &
 
@@ -55,9 +25,7 @@ exec-once = gsettings set $gnome-schema font-name 'Lexend 13'
 
 # monitor=,preferred,auto,auto
 monitor = DP-1, highres, auto, 1
-monitor = DP-2, highrr, -1920x0, 1
-workspace=DP-1,1
-workspace=DP-2,11
+# workspace=DP-1,1
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -90,14 +58,16 @@ env = "QT_QPA_PLATFORMTHEME,qt6ct"
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 15
-    gaps_out = 30
+    gaps_in = 0
+    gaps_out = 0
 
-    border_size = 0
+    border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(ffffffaa)
-    col.inactive_border = rgba(595959aa)
+    # col.active_border = rgba(ffffffaa)
+    # col.inactive_border = rgba(595959aa)
+    col.inactive_border = rgba(0a0a0aff)
+    col.active_border = rgba(101010ff)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
@@ -110,15 +80,14 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 0
 
     # Change transparency of focused and unfocused windows
     # active_opacity = 0.9
     # inactive_opacity = 0.5
 
-
     shadow {
-        enabled = true
+        enabled = false
         range = 8
         offset = -3, 5
         render_power = 4
@@ -127,7 +96,7 @@ decoration {
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
         # passes = 2
         # size = 10
         # ignore_opacity = true
@@ -139,13 +108,13 @@ animations {
     enabled = false
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    # bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    # animation = windows, 1, 7, myBezier
+    # animation = windowsOut, 1, 7, default, popin 80%
+    # animation = border, 1, 10, default
+    # animation = borderangle, 1, 8, default
+    # animation = fade, 1, 7, default
+    # animation = workspaces, 1, 6, default
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -242,32 +211,32 @@ bind = $mod shift, k, movewindow, u
 bind = $mod shift, j, movewindow, d
 
 # monitor move/focus
-bind = $mod SHIFT, z, split-changemonitor, next
+# bind = $mod SHIFT, z, split-changemonitor, next
 bind = $mod, z, focusmonitor, +1
 
 # Switch workspaces with mod + [0-9]
-bind = $mod, 1, split-workspace, 1
-bind = $mod, 2, split-workspace, 2
-bind = $mod, 3, split-workspace, 3
-bind = $mod, 4, split-workspace, 4
-bind = $mod, 5, split-workspace, 5
-bind = $mod, 6, split-workspace, 6
-bind = $mod, 7, split-workspace, 7
-bind = $mod, 8, split-workspace, 8
-bind = $mod, 9, split-workspace, 9
-bind = $mod, 0, split-workspace, 10
+bind = $mod, 1, workspace, 1
+bind = $mod, 2, workspace, 2
+bind = $mod, 3, workspace, 3
+bind = $mod, 4, workspace, 4
+bind = $mod, 5, workspace, 5
+bind = $mod, 6, workspace, 6
+bind = $mod, 7, workspace, 7
+bind = $mod, 8, workspace, 8
+bind = $mod, 9, workspace, 9
+bind = $mod, 0, workspace, 10
 
 # Move active window to a workspace with mod + SHIFT + [0-9]
-bind = $mod SHIFT, 1, split-movetoworkspacesilent, 1
-bind = $mod SHIFT, 2, split-movetoworkspacesilent, 2
-bind = $mod SHIFT, 3, split-movetoworkspacesilent, 3
-bind = $mod SHIFT, 4, split-movetoworkspacesilent, 4
-bind = $mod SHIFT, 5, split-movetoworkspacesilent, 5
-bind = $mod SHIFT, 6, split-movetoworkspacesilent, 6
-bind = $mod SHIFT, 7, split-movetoworkspacesilent, 7
-bind = $mod SHIFT, 8, split-movetoworkspacesilent, 8
-bind = $mod SHIFT, 9, split-movetoworkspacesilent, 9
-bind = $mod SHIFT, 0, split-movetoworkspacesilent, 10
+bind = $mod SHIFT, 1, movetoworkspace, 1
+bind = $mod SHIFT, 2, movetoworkspace, 2
+bind = $mod SHIFT, 3, movetoworkspace, 3
+bind = $mod SHIFT, 4, movetoworkspace, 4
+bind = $mod SHIFT, 5, movetoworkspace, 5
+bind = $mod SHIFT, 6, movetoworkspace, 6
+bind = $mod SHIFT, 7, movetoworkspace, 7
+bind = $mod SHIFT, 8, movetoworkspace, 8
+bind = $mod SHIFT, 9, movetoworkspace, 9
+bind = $mod SHIFT, 0, movetoworkspace, 10
 
 # Scroll through existing workspaces with mod + scroll
 bind = $mod, mouse_down, workspace, e+1
@@ -287,7 +256,7 @@ bindm = $mod, mouse:273, resizewindow
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 windowrulev2 = fullscreen,title:(DDNet Client)
-windowrulev2 = workspace 11, title:^(DDNet Client)$
+windowrulev2 = workspace 10, title:^(DDNet Client)$
 windowrulev2 = workspace 1, class:^(zen-alpha)$
 windowrulev2 = workspace 4, title:^(Spotify (Premium|Free)?)$
 windowrulev2 = workspace 7, title:^(.*(Disc|WebC)ord.*)$
