--- a/gui/kitty/.config/kitty/kitty.conf
+++ b/gui/kitty/.config/kitty/kitty.conf
@@ -1,29 +1,11 @@
 # Colors
 
-background   #131414
-color0       #252626
-color1       #C63E4D
-color2       #83BF57
-color3       #C38A4D
-color4       #378CBB
-color5       #C55F8C
-color6       #1BC0BF
-color7       #C8CACC
-color8       #4b4d4d
-color9       #FF7C76
-color10      #BEFF9B
-color11      #FFCF80
-color12      #7BB6F9
-color13      #FF98B9
-color14      #7FEDFD
-color15      #EDEFF2
-cursorColor  #BBBDBF
-foreground   #969899
-
 include $HOME/.cache/wal/colors-kitty.conf
 
+cursor none
+
 # Shell integration is sourced and configured manually
-shell_integration no-rc
+# shell_integration no-rc
 
 # For controlling padding with vim :3
 allow_remote_control yes
