feat(nvim): add snacks & smooth cursor

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -7,7 +7,6 @@ cl_text_entities_size 50
 cl_autoswitch_weapons 0
 cl_showhud_score 0
 cl_freezebars_alpha_inside_freeze 13
-cl_showfps 1
 cl_mouse_max_distance 350
 cl_smooth_spectating_time 200
 cl_show_welcome 0
@@ -18,9 +17,9 @@ player_color_body 6073088
 player_color_feet 9174843
 player_skin "Mouse_tee"
 player_default_eyes 2
-ui_settings_page 9
+ui_settings_page 5
 ui_toolbox_page 2
-ui_server_address "45.141.57.22:8319"
+ui_server_address "45.141.57.22:8345"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -44,7 +43,7 @@ br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
 br_sort_order 0
 br_demo_sort 2
 br_demo_sort_order 1
-snd_volume 43
+snd_volume 35
 snd_ambient_volume 0
 snd_nonactive_mute 1
 snd_gun 0
@@ -53,7 +52,7 @@ gfx_screen_height 2160
 gfx_screen_refresh_rate 240
 gfx_desktop_width 3840
 gfx_desktop_height 2160
-gfx_refresh_rate 420
+gfx_refresh_rate 480
 cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
@@ -122,50 +121,50 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_excluded_country "unique" "CAN"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "USA"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "RUS"
-add_excluded_country "ddnet" "UKR"
-add_excluded_country "ddnet" "ARG"
 add_excluded_country "ddnet" "IRN"
+add_excluded_country "ddnet" "BHR"
+add_excluded_country "ddnet" "UKR"
+add_excluded_country "ddnet" "RUS"
+add_excluded_country "ddnet" "SGP"
 add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "USA"
-add_excluded_country "ddnet" "SGP"
-add_excluded_country "ddnet" "RUS"
+add_excluded_country "ddnet" "AUS"
+add_excluded_country "ddnet" "CHL"
+add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "BRA"
 add_excluded_country "ddnet" "IND"
-add_excluded_country "ddnet" "CHL"
-add_excluded_country "ddnet" "AUS"
-add_excluded_country "ddnet" "TUR"
-add_excluded_country "ddnet" "KOR"
-add_excluded_country "ddnet" "BHR"
+add_excluded_country "ddnet" "ARG"
 add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
-add_excluded_type "ddnet" "Bomb"
-add_excluded_type "ddnet" "Infection"
-add_excluded_type "ddnet" "Monster"
-add_excluded_type "ddnet" "FNG"
-add_excluded_type "ddnet" "TeeSmash"
-add_excluded_type "ddnet" "TeeWare"
-add_excluded_type "ddnet" "xPanic"
-add_excluded_type "ddnet" "Foot"
-add_excluded_type "ddnet" "Block"
-add_excluded_type "ddnet" "gCTF"
-add_excluded_type "ddnet" "Tutorial"
-add_excluded_type "ddnet" "iCTF"
+add_excluded_country "ddnet" "TUR"
+add_excluded_country "nobyfng" "RUS"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "unique" "USA"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "CAN"
 add_excluded_type "ddnet" "zCatch"
 add_excluded_type "ddnet" "Vanilla"
 add_excluded_type "ddnet" "Test"
+add_excluded_type "ddnet" "Infection"
+add_excluded_type "ddnet" "Bomb"
+add_excluded_type "ddnet" "Monster"
+add_excluded_type "ddnet" "TeeSmash"
+add_excluded_type "ddnet" "FNG"
+add_excluded_type "ddnet" "Foot"
+add_excluded_type "ddnet" "TeeWare"
+add_excluded_type "ddnet" "xPanic"
+add_excluded_type "ddnet" "gCTF"
+add_excluded_type "ddnet" "Block"
+add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "Tutorial"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -333,6 +332,9 @@ add_friend "HaHAxD*" "flawLess"
 add_friend "Bolox" "old noob"
 add_friend "Tropo" "MentosBoyz"
 add_friend "TeeHee" ""
+add_friend "diamantium" "нαVσc"
+add_friend "Cloudly" ""
+add_friend "clefairy'" "Spæd"
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
