--- a/gui/kitty/.config/kitty/kitty.conf
+++ b/gui/kitty/.config/kitty/kitty.conf
@@ -3,6 +3,7 @@
 include $HOME/.cache/wal/colors-kitty.conf
 
 cursor none
+cursor_trail 1
 
 # Shell integration is sourced and configured manually
 # shell_integration no-rc
