feat(nvim): use blink (cmp) and fzf (telescope)

--- a/gui/kitty/.config/kitty/kitty.conf
+++ b/gui/kitty/.config/kitty/kitty.conf
@@ -24,7 +24,7 @@ copy_on_select yes
 # font_family Julia Mono
 font_family JetBrainsMono NF
 # font_family CaskaydiaCove NF
-# font_family Iosevka Matsuri
+# font_family Iosevka Custom
 font_size 16
 
 modify_font cell_height 115%
@@ -43,3 +43,5 @@ font_features JetBrainsMonoNF-Regular                 +ss02 +cv18 +cv14
 font_features JetBrainsMonoNF-SemiBold                +ss02 +cv18 +cv14
 font_features JetBrainsMonoNF-Italic                  +ss02 +cv18 +cv14
 font_features JetBrainsMonoNF-SemiBoldItalic          +ss02 +cv18 +cv14
+
+scrollback_pager nvim -c 'setlocal buftype=nofile bufhidden=hide noswapfile nonumber norelativenumber nolist showtabline=0 foldcolumn=0|Man!' -c "autocmd VimEnter * normal G" -
