--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -53,21 +53,33 @@ env = "QT_QPA_PLATFORMTHEME,qt6ct"
 #####################
 ### LOOK AND FEEL ###
 #####################
+# plugin {
+#     hyprbars {
+#         # example config
+#         bar_height = 40
+#         bar_text_size = 25
+#         bar_color = rgb(000000)
+#
+#         bar_precedence_over_border = true
+#         # example buttons (R -> L)
+#         # hyprbars-button = color, size, on-click
+#         hyprbars-button = rgb(aa4040), 15, , hyprctl dispatch killactive
+#         hyprbars-button = rgb(aaaa11), 15, , hyprctl dispatch fullscreen 1
+#     }
+# }
 
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 0
-    gaps_out = 0
+    gaps_in = 15
+    gaps_out = 20
 
-    border_size = 2
+    border_size = 6
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    # col.active_border = rgba(ffffffaa)
-    # col.inactive_border = rgba(595959aa)
-    col.inactive_border = rgba(0a0a0aff)
-    col.active_border = rgba(101010ff)
+    col.active_border = rgba(202020a0)
+    col.inactive_border = rgba(101010ff)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
@@ -80,11 +92,11 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 0
+    rounding = 10
 
     # Change transparency of focused and unfocused windows
-    # active_opacity = 0.9
-    # inactive_opacity = 0.5
+    active_opacity = 1.0
+    inactive_opacity = 1.0
 
     shadow {
         enabled = false
@@ -97,9 +109,9 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = false
-        # passes = 2
-        # size = 10
-        # ignore_opacity = true
+        passes = 3
+        size = 10
+        ignore_opacity = true
     }
 }
 
