--- a/wm/wallpaper/.config/systemd/user/wallpaper_timer.service
+++ b/wm/wallpaper/.config/systemd/user/wallpaper_timer.service
@@ -2,4 +2,4 @@
 Description=Wallpaper changer
 
 [Service]
-ExecStart=/home/mori/.local/bin/wallpaper_timer.sh /home/mori/Pictures/Walls/Krumm 4 23
+ExecStart=/home/mori/.local/bin/wallpaper_timer.sh /home/mori/Pictures/Walls/annie "random" 8 23 
