--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -13,13 +13,13 @@ cl_show_welcome 0
 cl_download_community_skins 1
 cl_default_zoom 9
 player_use_custom_color 1
-player_color_body 6073088
-player_color_feet 9174843
-player_skin "Mouse_tee"
+player_color_body 6404376
+player_color_feet 2424635
+player_skin "koon"
 player_default_eyes 2
-ui_settings_page 5
+ui_settings_page 6
 ui_toolbox_page 2
-ui_server_address "45.141.57.22:8345"
+ui_server_address "45.141.57.22:8336"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -65,8 +65,12 @@ cl_timeout_code "SKACWJCXZQYcdNSs"
 cl_dummy_timeout_code "JUcyPbxZibEUQiGW"
 cl_timeout_seed "3fbXknWRfNKcnL3j"
 cl_config_version 1
+gfx_gl_major 3
+gfx_gl_minor 0
+gfx_3d_texture_analysis_ran 1
 gfx_3d_texture_analysis_renderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
-gfx_3d_texture_analysis_version "4.6.0 NVIDIA 525.78.01"
+gfx_3d_texture_analysis_version "4.6.0 NVIDIA 565.77"
+gfx_backend "OpenGL"
 unbindall
 bind a "+weapon4"
 bind b "say_team (づ ᴗ _ᴗ)づ  b"
@@ -80,6 +84,7 @@ bind i "say Чушпан"
 bind j "rcon down"
 bind k "rcon up"
 bind l "say /login pJg5V8GOysdY2wSS"
+bind n "say Спокойной ночи, спи хорошо и пусть тебе присняться сладкие сны <33"
 bind o "say Я расстроен, что ты не помог мне"
 bind p "say Я люблю тебя"
 bind q "+showhookcoll"
@@ -121,50 +126,50 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_excluded_country "ddnet" "IRN"
+add_excluded_country "unique" "CAN"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "USA"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "RUS"
+add_excluded_country "ddnet" "BRA"
 add_excluded_country "ddnet" "BHR"
-add_excluded_country "ddnet" "UKR"
-add_excluded_country "ddnet" "RUS"
-add_excluded_country "ddnet" "SGP"
+add_excluded_country "ddnet" "ARG"
+add_excluded_country "ddnet" "TWN"
+add_excluded_country "ddnet" "ZAF"
+add_excluded_country "ddnet" "TUR"
+add_excluded_country "ddnet" "IRN"
 add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "USA"
+add_excluded_country "ddnet" "UKR"
+add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "RUS"
+add_excluded_country "ddnet" "SGP"
+add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "AUS"
 add_excluded_country "ddnet" "CHL"
-add_excluded_country "ddnet" "KOR"
-add_excluded_country "ddnet" "BRA"
-add_excluded_country "ddnet" "IND"
-add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "ZAF"
-add_excluded_country "ddnet" "TWN"
-add_excluded_country "ddnet" "TUR"
-add_excluded_country "nobyfng" "RUS"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "unique" "USA"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "CAN"
-add_excluded_type "ddnet" "zCatch"
-add_excluded_type "ddnet" "Vanilla"
-add_excluded_type "ddnet" "Test"
-add_excluded_type "ddnet" "Infection"
-add_excluded_type "ddnet" "Bomb"
 add_excluded_type "ddnet" "Monster"
 add_excluded_type "ddnet" "TeeSmash"
 add_excluded_type "ddnet" "FNG"
+add_excluded_type "ddnet" "xPanic"
 add_excluded_type "ddnet" "Foot"
 add_excluded_type "ddnet" "TeeWare"
-add_excluded_type "ddnet" "xPanic"
 add_excluded_type "ddnet" "gCTF"
 add_excluded_type "ddnet" "Block"
 add_excluded_type "ddnet" "iCTF"
 add_excluded_type "ddnet" "Tutorial"
+add_excluded_type "ddnet" "zCatch"
+add_excluded_type "ddnet" "Vanilla"
+add_excluded_type "ddnet" "Test"
+add_excluded_type "ddnet" "Bomb"
+add_excluded_type "ddnet" "Infection"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -335,6 +340,13 @@ add_friend "TeeHee" ""
 add_friend "diamantium" "нαVσc"
 add_friend "Cloudly" ""
 add_friend "clefairy'" "Spæd"
+add_friend "ty4." "Nephritis"
+add_friend "Noctua" ""
+add_friend "" "FirstClass"
+add_friend "estguy" ""
+add_friend "Paw" "☼♫"
+add_friend "ez" "YEP"
+add_friend "muqasa" ""
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
