feat(gaming): mangohud+gamemode

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -17,9 +17,10 @@ player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
+ui_page 9
 ui_settings_page 6
-ui_toolbox_page 2
-ui_server_address "45.141.57.22:8336"
+ui_toolbox_page 1
+ui_server_address "65.109.48.114:8349"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -52,12 +53,12 @@ gfx_screen_height 2160
 gfx_screen_refresh_rate 240
 gfx_desktop_width 3840
 gfx_desktop_height 2160
-gfx_refresh_rate 480
+gfx_refresh_rate 960
 cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
-cl_background_entities_color 0
-cl_background_entities "bit2x.map"
+cl_background_entities_color 69
+cl_background_entities "bit2x.ma"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
@@ -65,12 +66,9 @@ cl_timeout_code "SKACWJCXZQYcdNSs"
 cl_dummy_timeout_code "JUcyPbxZibEUQiGW"
 cl_timeout_seed "3fbXknWRfNKcnL3j"
 cl_config_version 1
-gfx_gl_major 3
-gfx_gl_minor 0
 gfx_3d_texture_analysis_ran 1
 gfx_3d_texture_analysis_renderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
 gfx_3d_texture_analysis_version "4.6.0 NVIDIA 565.77"
-gfx_backend "OpenGL"
 unbindall
 bind a "+weapon4"
 bind b "say_team (づ ᴗ _ᴗ)づ  b"
@@ -139,37 +137,37 @@ add_excluded_country "nobyfng" "BRA"
 add_excluded_country "nobyfng" "CHL"
 add_excluded_country "nobyfng" "SGP"
 add_excluded_country "nobyfng" "RUS"
-add_excluded_country "ddnet" "BRA"
-add_excluded_country "ddnet" "BHR"
-add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "TWN"
-add_excluded_country "ddnet" "ZAF"
-add_excluded_country "ddnet" "TUR"
-add_excluded_country "ddnet" "IRN"
-add_excluded_country "ddnet" "CHN"
-add_excluded_country "ddnet" "USA"
-add_excluded_country "ddnet" "UKR"
-add_excluded_country "ddnet" "IND"
 add_excluded_country "ddnet" "RUS"
 add_excluded_country "ddnet" "SGP"
-add_excluded_country "ddnet" "KOR"
+add_excluded_country "ddnet" "TUR"
 add_excluded_country "ddnet" "AUS"
 add_excluded_country "ddnet" "CHL"
-add_excluded_type "ddnet" "Monster"
-add_excluded_type "ddnet" "TeeSmash"
-add_excluded_type "ddnet" "FNG"
-add_excluded_type "ddnet" "xPanic"
-add_excluded_type "ddnet" "Foot"
-add_excluded_type "ddnet" "TeeWare"
-add_excluded_type "ddnet" "gCTF"
-add_excluded_type "ddnet" "Block"
-add_excluded_type "ddnet" "iCTF"
-add_excluded_type "ddnet" "Tutorial"
+add_excluded_country "ddnet" "ARG"
+add_excluded_country "ddnet" "BHR"
+add_excluded_country "ddnet" "KOR"
+add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "ZAF"
+add_excluded_country "ddnet" "TWN"
+add_excluded_country "ddnet" "UKR"
+add_excluded_country "ddnet" "CHN"
+add_excluded_country "ddnet" "USA"
+add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "IRN"
 add_excluded_type "ddnet" "zCatch"
 add_excluded_type "ddnet" "Vanilla"
 add_excluded_type "ddnet" "Test"
 add_excluded_type "ddnet" "Bomb"
 add_excluded_type "ddnet" "Infection"
+add_excluded_type "ddnet" "Monster"
+add_excluded_type "ddnet" "FNG"
+add_excluded_type "ddnet" "TeeSmash"
+add_excluded_type "ddnet" "Foot"
+add_excluded_type "ddnet" "TeeWare"
+add_excluded_type "ddnet" "xPanic"
+add_excluded_type "ddnet" "Block"
+add_excluded_type "ddnet" "gCTF"
+add_excluded_type "ddnet" "Tutorial"
+add_excluded_type "ddnet" "iCTF"
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -347,6 +345,8 @@ add_friend "estguy" ""
 add_friend "Paw" "☼♫"
 add_friend "ez" "YEP"
 add_friend "muqasa" ""
+add_friend "Destoros" ""
+add_friend "mgarc" ""
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
