feat: add ddnet dunst pauser

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,10 +1,12 @@
 cl_antiping 1
 cl_nameplates 0
 cl_nameplates_size 0
+cl_nameplates_clan_size 0
 cl_nameplates_strong 1
+cl_nameplates_strong_size 38
 cl_text_entities 0
 cl_text_entities_size 50
-cl_autoswitch_weapons 0
+cl_showhud_healthammo 0
 cl_showhud_score 0
 cl_freezebars_alpha_inside_freeze 13
 cl_mouse_max_distance 350
@@ -18,9 +20,9 @@ player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
 ui_page 9
-ui_settings_page 6
+ui_settings_page 8
 ui_toolbox_page 1
-ui_server_address "65.109.48.114:8349"
+ui_server_address "45.141.57.22:8360"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -58,10 +60,12 @@ cl_race_binds_set 1
 cl_race_show_ghost 0
 cl_overlay_entities 100
 cl_background_entities_color 69
-cl_background_entities "bit2x.ma"
+cl_background_entities "bit2x.mapx"
 cl_menu_map "heavens"
 cl_show_ninja 0
 cl_hook_coll_size 3
+cl_chat_size 52
+cl_direction_size -9
 cl_timeout_code "SKACWJCXZQYcdNSs"
 cl_dummy_timeout_code "JUcyPbxZibEUQiGW"
 cl_timeout_seed "3fbXknWRfNKcnL3j"
@@ -128,6 +132,11 @@ add_excluded_country "unique" "CAN"
 add_excluded_country "unique" "TWN"
 add_excluded_country "unique" "USA"
 add_excluded_country "blockworlds" "RUS"
+add_excluded_country "all" "BRA"
+add_excluded_country "all" "CHL"
+add_excluded_country "all" "USA"
+add_excluded_country "all" "RUS"
+add_excluded_country "all" "FRA"
 add_excluded_country "nobyfng" "ZAF"
 add_excluded_country "nobyfng" "KOR"
 add_excluded_country "nobyfng" "TWN"
@@ -137,37 +146,37 @@ add_excluded_country "nobyfng" "BRA"
 add_excluded_country "nobyfng" "CHL"
 add_excluded_country "nobyfng" "SGP"
 add_excluded_country "nobyfng" "RUS"
-add_excluded_country "ddnet" "RUS"
-add_excluded_country "ddnet" "SGP"
 add_excluded_country "ddnet" "TUR"
-add_excluded_country "ddnet" "AUS"
 add_excluded_country "ddnet" "CHL"
+add_excluded_country "ddnet" "KOR"
+add_excluded_country "ddnet" "IND"
 add_excluded_country "ddnet" "ARG"
 add_excluded_country "ddnet" "BHR"
-add_excluded_country "ddnet" "KOR"
-add_excluded_country "ddnet" "BRA"
 add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
-add_excluded_country "ddnet" "UKR"
+add_excluded_country "ddnet" "IRN"
 add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "USA"
-add_excluded_country "ddnet" "IND"
-add_excluded_country "ddnet" "IRN"
+add_excluded_country "ddnet" "SGP"
+add_excluded_country "ddnet" "RUS"
+add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "AUS"
+add_excluded_type "ddnet" "TeeSmash"
+add_excluded_type "ddnet" "FNG"
+add_excluded_type "ddnet" "gCTF"
+add_excluded_type "ddnet" "Block"
+add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "Tutorial"
 add_excluded_type "ddnet" "zCatch"
 add_excluded_type "ddnet" "Vanilla"
 add_excluded_type "ddnet" "Test"
 add_excluded_type "ddnet" "Bomb"
 add_excluded_type "ddnet" "Infection"
-add_excluded_type "ddnet" "Monster"
-add_excluded_type "ddnet" "FNG"
-add_excluded_type "ddnet" "TeeSmash"
 add_excluded_type "ddnet" "Foot"
-add_excluded_type "ddnet" "TeeWare"
 add_excluded_type "ddnet" "xPanic"
-add_excluded_type "ddnet" "Block"
-add_excluded_type "ddnet" "gCTF"
-add_excluded_type "ddnet" "Tutorial"
-add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "TeeWare"
+add_excluded_type "ddnet" "Monster"
+add_favorite 176.9.114.238:8297
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
 add_friend "" "Eagle"
@@ -347,6 +356,24 @@ add_friend "ez" "YEP"
 add_friend "muqasa" ""
 add_friend "Destoros" ""
 add_friend "mgarc" ""
+tc_frozen_tees_size 10
+tc_frozen_tees_only_inteam 1
+tc_improve_mouse_precision 1
+tc_fast_input 1
+tc_fast_input_others 1
+tc_outline_in_entities 1
+tc_outline_unfreeze 1
+tc_outline_width 2
+tc_indicator_offset 16
+tc_indicator_radius 1
+tc_indicator_opacity 3
+tc_cursor_in_spec 1
+tc_cursor_in_spec_alpha 3
+tc_profile_name 1
+tc_profile_clan 1
+tc_profile_flag 1
+tc_auto_verify 1
+tc_statusbar_12_hour_clock 0
 br_filter_exclude_communities "kog,unique,nobyfng,none"
 br_filter_exclude_countries "RUS,IRN,TUR,CHL,BRA,ARG,PER,USA,CHN,TWN,KOR,SGP,IND,AUS,ZAF,RUS,CHN,RUS"
 br_filter_exclude_types "Block,Infection,iCTF,Vanilla,FNG,TeeWare,Bomb,Block,FNG,Bomb,TeeWare,Vanilla,iCTF,Infection,Block,FNG,TeeWare,Vanilla"
