--- a/gui/kitty/.config/kitty/kitty.conf
+++ b/gui/kitty/.config/kitty/kitty.conf
@@ -15,16 +15,16 @@ listen_on unix:/tmp/mykitty
 # Graphical
 confirm_os_window_close 0
 hide_window_decorations yes
-window_padding_width 10
+window_padding_width 5
 
 copy_on_select yes
 
 # Font
 # font_family Maple Mono SC NF
 # font_family Julia Mono
-font_family JetBrainsMono NF
+# font_family JetBrainsMono NF
 # font_family CaskaydiaCove NF
-# font_family Iosevka Custom
+font_family Iosevka Custom
 font_size 16
 
 modify_font cell_height 115%
