--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -1,7 +1,7 @@
 #################
 ### AUTOSTART ###
 #################
-exec-once = zen-browser &
+exec-once = firefox-nightly &
 
 # exec-once = ags &
 # exec-once = systemctl --user start wallpaper_timer.service
@@ -9,9 +9,12 @@ exec-once = mkfifo /tmp/wobpipe && tail -f /tmp/wobpipe | wob &
 exec-once = wlsunset -l 49.87 -L 8.65 &
 exec-once = swww-daemon &
 
+exec-once = ./handle_dunst.sh &
 exec-once = hypridle &
 exec-once = (pkill hyprdim; sleep 2 && hyprdim --duration 500 --strength 0.6) &
 exec-once = hyprctl setcursor phinger-cursors-light 48 &
+
+exec-once = openrgb --profile ~/.config/OpenRGB/blub.orp &
 
 $gnome-schema = org.gnome.desktop.interface
 exec-once = gsettings set $gnome-schema icon-theme "WhiteSur"
@@ -157,8 +160,10 @@ cursor {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
-    kb_variant = altgr-intl
+    # kb_layout = us
+    # kb_variant = altgr-intl
+    kb_layout = eu
+    kb_variant =
     kb_model =
     kb_options =
     kb_rules =
@@ -269,16 +274,16 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 windowrulev2 = fullscreen,title:(DDNet Client)
 windowrulev2 = workspace 10, title:^(DDNet Client)$
-windowrulev2 = workspace 1, class:^(zen-alpha)$
+windowrulev2 = workspace 1, class:^(firefox-nightly)$
 windowrulev2 = workspace 4, title:^(Spotify (Premium|Free)?)$
-windowrulev2 = workspace 7, title:^(.*(Disc|WebC)ord.*)$
+windowrulev2 = workspace 7, class:^(discord)$
 windowrulev2 = workspace 7, title:^(discord-screenaudio)$
 
 # Center and resize save as dialogs
 windowrulev2 = center,title:(Save As)
 windowrulev2 = size 50% 50%,title:(Save As)
 
-windowrulev2 = center,title:(.* Bitwarden — Mozilla Firefox)$
-windowrulev2 = size 50% 50%,title:(.* Bitwarden — Mozilla Firefox)$
+windowrulev2 = center,title:(.* Bitwarden — Firefox Nightly)$
+windowrulev2 = size 50% 50%,title:(.* Bitwarden — Firefox Nightly)$
 
 layerrule = blur,bar
