--- a/cli/yazi/.config/yazi/keymap.toml
+++ b/cli/yazi/.config/yazi/keymap.toml
@@ -1,4 +1,4 @@
 [[manager.prepend_keymap]]
 on   = [ "<C-b>" ]
-run  = 'shell --confirm "set_wall.sh $1"'
+run  = 'shell --confirm "set_wall.sh $@"'
 desc = "Just for test!"
