--- a/gui/zed-editor/.config/zed/settings.json
+++ b/gui/zed-editor/.config/zed/settings.json
@@ -14,7 +14,7 @@
   "theme": {
     "mode": "system",
     "light": "Ayu Light",
-    "dark": "One Dark"
+    "dark": "Phine"
   },
   "relative_line_numbers": true,
   "vim_mode": true,
