feat: snacks picker, ghostty, hx

--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -2,7 +2,6 @@ cl_antiping 1
 cl_nameplates 0
 cl_nameplates_size 0
 cl_nameplates_clan_size 0
-cl_nameplates_strong 1
 cl_nameplates_strong_size 38
 cl_text_entities 0
 cl_text_entities_size 50
@@ -19,10 +18,9 @@ player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
-ui_page 9
-ui_settings_page 8
-ui_toolbox_page 1
-ui_server_address "45.141.57.22:8360"
+ui_settings_page 9
+ui_toolbox_page 2
+ui_server_address "45.141.57.31:8387"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -50,11 +48,11 @@ snd_volume 35
 snd_ambient_volume 0
 snd_nonactive_mute 1
 snd_gun 0
-gfx_screen_width 3840
-gfx_screen_height 2160
-gfx_screen_refresh_rate 240
-gfx_desktop_width 3840
-gfx_desktop_height 2160
+gfx_screen_width 1920
+gfx_screen_height 1080
+gfx_screen_refresh_rate 480
+gfx_desktop_width 1920
+gfx_desktop_height 1080
 gfx_refresh_rate 960
 cl_race_binds_set 1
 cl_race_show_ghost 0
@@ -146,36 +144,36 @@ add_excluded_country "nobyfng" "BRA"
 add_excluded_country "nobyfng" "CHL"
 add_excluded_country "nobyfng" "SGP"
 add_excluded_country "nobyfng" "RUS"
-add_excluded_country "ddnet" "TUR"
-add_excluded_country "ddnet" "CHL"
-add_excluded_country "ddnet" "KOR"
-add_excluded_country "ddnet" "IND"
-add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "BHR"
-add_excluded_country "ddnet" "ZAF"
-add_excluded_country "ddnet" "TWN"
-add_excluded_country "ddnet" "IRN"
 add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "USA"
-add_excluded_country "ddnet" "SGP"
 add_excluded_country "ddnet" "RUS"
-add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "SGP"
 add_excluded_country "ddnet" "AUS"
-add_excluded_type "ddnet" "TeeSmash"
+add_excluded_country "ddnet" "CHL"
+add_excluded_country "ddnet" "BRA"
+add_excluded_country "ddnet" "KOR"
+add_excluded_country "ddnet" "TUR"
+add_excluded_country "ddnet" "ARG"
+add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "ZAF"
+add_excluded_country "ddnet" "TWN"
+add_excluded_country "ddnet" "BHR"
+add_excluded_country "ddnet" "IRN"
+add_excluded_type "ddnet" "Bomb"
+add_excluded_type "ddnet" "Infection"
+add_excluded_type "ddnet" "Monster"
 add_excluded_type "ddnet" "FNG"
-add_excluded_type "ddnet" "gCTF"
+add_excluded_type "ddnet" "TeeSmash"
+add_excluded_type "ddnet" "TeeWare"
+add_excluded_type "ddnet" "xPanic"
+add_excluded_type "ddnet" "Foot"
 add_excluded_type "ddnet" "Block"
-add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "gCTF"
 add_excluded_type "ddnet" "Tutorial"
+add_excluded_type "ddnet" "iCTF"
 add_excluded_type "ddnet" "zCatch"
 add_excluded_type "ddnet" "Vanilla"
 add_excluded_type "ddnet" "Test"
-add_excluded_type "ddnet" "Bomb"
-add_excluded_type "ddnet" "Infection"
-add_excluded_type "ddnet" "Foot"
-add_excluded_type "ddnet" "xPanic"
-add_excluded_type "ddnet" "TeeWare"
-add_excluded_type "ddnet" "Monster"
 add_favorite 176.9.114.238:8297
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
@@ -356,6 +354,7 @@ add_friend "ez" "YEP"
 add_friend "muqasa" ""
 add_friend "Destoros" ""
 add_friend "mgarc" ""
+add_friend "DarkFollowq" "HyperSonic"
 tc_frozen_tees_size 10
 tc_frozen_tees_only_inteam 1
 tc_improve_mouse_precision 1
