--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ exec-once = mkfifo /tmp/wobpipe && tail -f /tmp/wobpipe | wob &
 exec-once = wlsunset -l 49.87 -L 8.65 &
 exec-once = swww-daemon &
 
-exec-once = ./handle_dunst.sh &
+exec-once = . $HOME/.config/hypr/handle_dunst.sh &
 exec-once = hypridle &
 exec-once = (pkill hyprdim; sleep 2 && hyprdim --duration 500 --strength 0.6) &
 exec-once = hyprctl setcursor phinger-cursors-light 48 &
@@ -197,7 +197,7 @@ bind = ,XF86AudioMicMute, exec, pamixer --default-source -t
 bind = $mod, P, exec, hyprshot --mode region --output $HOME/Pictures/Scrots --freeze
 bind = $mod shift, P, exec, hyprshot --mode region --raw --freeze | satty --filename - --fullscreen --output-filename $HOME/Pictures/Scrots/satty-$(date '+%Y%m%d-%H:%M:%S').png
 
-bind = $mod, return, exec, kitty
+bind = $mod, return, exec, ghostty
 bind = $mod, D, exec, anyrun
 
 bind = $mod, q, killactive,
