feat: snacks picker

--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -227,9 +227,15 @@ bind = $mod shift, l, movewindow, r
 bind = $mod shift, k, movewindow, u
 bind = $mod shift, j, movewindow, d
 
+# resize
+binde = $mod ctrl, h, resizeactive, -100 0
+binde = $mod ctrl, l, resizeactive, 100 0
+binde = $mod ctrl, k, resizeactive, 0 -100
+binde = $mod ctrl, j, resizeactive, 0 100
+
 # monitor move/focus
 # bind = $mod SHIFT, z, split-changemonitor, next
-bind = $mod, z, focusmonitor, +1
+# bind = $mod, z, focusmonitor, +1
 
 # Switch workspaces with mod + [0-9]
 bind = $mod, 1, workspace, 1
