--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -7,6 +7,7 @@ cl_text_entities 0
 cl_text_entities_size 50
 cl_showhud_healthammo 0
 cl_showhud_score 0
+cl_showhud_player_speed 1
 cl_freezebars_alpha_inside_freeze 13
 cl_mouse_max_distance 350
 cl_smooth_spectating_time 200
@@ -18,9 +19,9 @@ player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
-ui_settings_page 9
+ui_settings_page 2
 ui_toolbox_page 2
-ui_server_address "45.141.57.31:8387"
+ui_server_address "45.141.57.22:8357"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -48,11 +49,11 @@ snd_volume 35
 snd_ambient_volume 0
 snd_nonactive_mute 1
 snd_gun 0
-gfx_screen_width 1920
-gfx_screen_height 1080
-gfx_screen_refresh_rate 480
-gfx_desktop_width 1920
-gfx_desktop_height 1080
+gfx_screen_width 3840
+gfx_screen_height 2160
+gfx_screen_refresh_rate 240
+gfx_desktop_width 3840
+gfx_desktop_height 2160
 gfx_refresh_rate 960
 cl_race_binds_set 1
 cl_race_show_ghost 0
@@ -144,36 +145,36 @@ add_excluded_country "nobyfng" "BRA"
 add_excluded_country "nobyfng" "CHL"
 add_excluded_country "nobyfng" "SGP"
 add_excluded_country "nobyfng" "RUS"
-add_excluded_country "ddnet" "CHN"
-add_excluded_country "ddnet" "USA"
+add_excluded_country "ddnet" "BHR"
 add_excluded_country "ddnet" "RUS"
 add_excluded_country "ddnet" "SGP"
 add_excluded_country "ddnet" "AUS"
 add_excluded_country "ddnet" "CHL"
 add_excluded_country "ddnet" "BRA"
-add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "TUR"
-add_excluded_country "ddnet" "ARG"
+add_excluded_country "ddnet" "KOR"
 add_excluded_country "ddnet" "IND"
+add_excluded_country "ddnet" "ARG"
 add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
-add_excluded_country "ddnet" "BHR"
 add_excluded_country "ddnet" "IRN"
-add_excluded_type "ddnet" "Bomb"
-add_excluded_type "ddnet" "Infection"
+add_excluded_country "ddnet" "CHN"
+add_excluded_country "ddnet" "USA"
 add_excluded_type "ddnet" "Monster"
-add_excluded_type "ddnet" "FNG"
 add_excluded_type "ddnet" "TeeSmash"
-add_excluded_type "ddnet" "TeeWare"
+add_excluded_type "ddnet" "FNG"
 add_excluded_type "ddnet" "xPanic"
 add_excluded_type "ddnet" "Foot"
-add_excluded_type "ddnet" "Block"
+add_excluded_type "ddnet" "TeeWare"
 add_excluded_type "ddnet" "gCTF"
-add_excluded_type "ddnet" "Tutorial"
+add_excluded_type "ddnet" "Block"
 add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "Tutorial"
 add_excluded_type "ddnet" "zCatch"
 add_excluded_type "ddnet" "Vanilla"
 add_excluded_type "ddnet" "Test"
+add_excluded_type "ddnet" "Bomb"
+add_excluded_type "ddnet" "Infection"
 add_favorite 176.9.114.238:8297
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
@@ -355,6 +356,7 @@ add_friend "muqasa" ""
 add_friend "Destoros" ""
 add_friend "mgarc" ""
 add_friend "DarkFollowq" "HyperSonic"
+add_friend "Claanzi" "Fimozz"
 tc_frozen_tees_size 10
 tc_frozen_tees_only_inteam 1
 tc_improve_mouse_precision 1
