feat(wal): add hypr colors

--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -1,3 +1,5 @@
+source=$HOME/.cache/wal/colors-hypr.conf
+
 #################
 ### AUTOSTART ###
 #################
@@ -81,8 +83,8 @@ general {
     border_size = 6
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(202020a0)
-    col.inactive_border = rgba(101010ff)
+    col.active_border = $active
+    col.inactive_border = $inactive
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
