--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -1,9 +1,8 @@
 cl_antiping 1
-cl_nameplates 0
 cl_nameplates_size 0
 cl_nameplates_clan_size 0
+cl_nameplates_strong 1
 cl_nameplates_strong_size 38
-cl_text_entities 0
 cl_text_entities_size 50
 cl_showhud_healthammo 0
 cl_showhud_score 0
@@ -18,9 +17,9 @@ player_color_body 6404376
 player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
-ui_settings_page 9
+ui_settings_page 3
 ui_toolbox_page 2
-ui_server_address "45.141.57.22:8363"
+ui_server_address "57.128.201.180:8322"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -41,7 +40,6 @@ cl_asset_hud "Whitney"
 br_filter_string ""
 br_filter_login 0
 br_cached_best_serverinfo_url "https://master1.ddnet.org/ddnet/15/servers.json"
-br_sort_order 0
 br_demo_sort 2
 br_demo_sort_order 1
 snd_volume 35
@@ -68,9 +66,12 @@ cl_timeout_code "SKACWJCXZQYcdNSs"
 cl_dummy_timeout_code "JUcyPbxZibEUQiGW"
 cl_timeout_seed "3fbXknWRfNKcnL3j"
 cl_config_version 1
+gfx_gl_major 3
+gfx_gl_minor 0
 gfx_3d_texture_analysis_ran 1
 gfx_3d_texture_analysis_renderer "NVIDIA GeForce RTX 3060/PCIe/SSE2"
-gfx_3d_texture_analysis_version "4.6.0 NVIDIA 565.77"
+gfx_3d_texture_analysis_version "4.6.0 NVIDIA 570.86.16"
+gfx_backend "OpenGL"
 unbindall
 bind a "+weapon4"
 bind b "say_team (づ ᴗ _ᴗ)づ  b"
@@ -85,7 +86,7 @@ bind j "rcon down"
 bind k "rcon up"
 bind l "say /login pJg5V8GOysdY2wSS"
 bind n "say Спокойной ночи, спи хорошо и пусть тебе присняться сладкие сны <33"
-bind o "say Я расстроен, что ты не помог мне"
+bind o "say пиздуйте назад, я упал "
 bind p "say Я люблю тебя"
 bind q "+showhookcoll"
 bind r "say /pause"
@@ -126,54 +127,54 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
+add_excluded_country "unique" "CAN"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "USA"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "all" "BRA"
+add_excluded_country "all" "CHL"
+add_excluded_country "all" "USA"
+add_excluded_country "all" "RUS"
+add_excluded_country "all" "FRA"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "RUS"
 add_excluded_country "ddnet" "IRN"
-add_excluded_country "ddnet" "IND"
-add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "USA"
+add_excluded_country "ddnet" "CHN"
 add_excluded_country "ddnet" "RUS"
 add_excluded_country "ddnet" "SGP"
-add_excluded_country "ddnet" "BHR"
+add_excluded_country "ddnet" "TUR"
+add_excluded_country "ddnet" "IND"
 add_excluded_country "ddnet" "CHL"
 add_excluded_country "ddnet" "AUS"
+add_excluded_country "ddnet" "BHR"
 add_excluded_country "ddnet" "KOR"
-add_excluded_country "ddnet" "BRA"
 add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "TUR"
-add_excluded_country "ddnet" "ZAF"
 add_excluded_country "ddnet" "TWN"
-add_excluded_country "nobyfng" "RUS"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "all" "FRA"
-add_excluded_country "all" "RUS"
-add_excluded_country "all" "USA"
-add_excluded_country "all" "CHL"
-add_excluded_country "all" "BRA"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "unique" "USA"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "CAN"
-add_excluded_type "ddnet" "Infection"
-add_excluded_type "ddnet" "Bomb"
+add_excluded_country "ddnet" "ZAF"
+add_excluded_country "ddnet" "BRA"
 add_excluded_type "ddnet" "Monster"
-add_excluded_type "ddnet" "TeeSmash"
 add_excluded_type "ddnet" "FNG"
-add_excluded_type "ddnet" "TeeWare"
-add_excluded_type "ddnet" "xPanic"
-add_excluded_type "ddnet" "Foot"
-add_excluded_type "ddnet" "gCTF"
+add_excluded_type "ddnet" "TeeSmash"
 add_excluded_type "ddnet" "Block"
-add_excluded_type "ddnet" "iCTF"
+add_excluded_type "ddnet" "gCTF"
 add_excluded_type "ddnet" "Tutorial"
+add_excluded_type "ddnet" "iCTF"
 add_excluded_type "ddnet" "zCatch"
 add_excluded_type "ddnet" "Vanilla"
 add_excluded_type "ddnet" "Test"
+add_excluded_type "ddnet" "Infection"
+add_excluded_type "ddnet" "Bomb"
+add_excluded_type "ddnet" "TeeWare"
+add_excluded_type "ddnet" "Foot"
+add_excluded_type "ddnet" "xPanic"
 add_favorite 176.9.114.238:8297
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
@@ -357,6 +358,7 @@ add_friend "mgarc" ""
 add_friend "DarkFollowq" "HyperSonic"
 add_friend "Claanzi" "Fimozz"
 add_friend "Natsume" "FlexTape"
+add_friend "Gobrox" ""
 tc_frozen_tees_size 10
 tc_frozen_tees_only_inteam 1
 tc_improve_mouse_precision 1
