--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ exec-once = mkfifo /tmp/wobpipe && tail -f /tmp/wobpipe | wob &
 exec-once = wlsunset -l 49.87 -L 8.65 &
 exec-once = swww-daemon &
 
-exec-once = . $HOME/.config/hypr/handle_dunst.sh &
+exec-once = . $HOME/.config/hypr/handle_dunst.sh
 exec-once = hypridle &
 exec-once = (pkill hyprdim; sleep 2 && hyprdim --duration 500 --strength 0.6) &
 exec-once = hyprctl setcursor phinger-cursors-light 48 &
