--- a/gui/ghostty/.config/ghostty/config
+++ b/gui/ghostty/.config/ghostty/config
@@ -1,4 +1,5 @@
-font-family = JetBrainsMono Nerd Font
+# font-family = JetBrainsMono Nerd Font
+font-family = Maple Mono NF
 font-size = 16
 # adjust-font-baseline = 110
 
