--- a/gui/kitty/.config/kitty/kitty.conf
+++ b/gui/kitty/.config/kitty/kitty.conf
@@ -20,7 +20,7 @@ window_padding_width 5
 copy_on_select yes
 
 # Font
-font_family Maple Mono SC NF
+font_family Maple Mono NF
 # font_family Julia Mono
 # font_family JetBrainsMono NF
 # font_family CaskaydiaCove NF
