--- a/wm/hyprland/.config/hypr/hyprland.conf
+++ b/wm/hyprland/.config/hypr/hyprland.conf
@@ -30,6 +30,8 @@ exec-once = gsettings set $gnome-schema font-name 'Lexend 13'
 
 # monitor=,preferred,auto,auto
 monitor = DP-1, highres, auto, 1
+# monitor = HDMI-A-1, highres, auto, 1
+monitor = HDMI-A-1, disable
 # workspace=DP-1,1
 
 #############################
