--- a/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
+++ b/gaming/ddnet/.local/share/ddnet/settings_ddnet.cfg
@@ -18,8 +18,8 @@ player_color_feet 2424635
 player_skin "koon"
 player_default_eyes 2
 ui_settings_page 3
-ui_toolbox_page 2
-ui_server_address "57.128.201.180:8322"
+ui_toolbox_page 1
+ui_server_address "152.53.12.54:8301"
 ui_color 3449833124
 ui_unread_news 1
 dummy_country 638
@@ -32,7 +32,7 @@ cl_skip_start_menu 1
 player_name "=phacrum="
 player_clan "desufnoc"
 player_country 850
-cl_skin_filter_string "koon"
+cl_skin_filter_string "whis"
 cl_assets_entities "InsomniaBrown_Entities"
 cl_asset_game "game_AK47_PitchBlack_mixed_st"
 cl_asset_emoticons "Comic_by_Ravie_CC_BY-NC-ND"
@@ -127,27 +127,14 @@ bind mouse5 "+toggle cl_mouse_max_distance 2 350; +toggle inp_mousesens 5 200"
 bind mousewheelup "zoom+"
 bind mousewheeldown "zoom-"
 add_favorite_community "ddnet"
-add_excluded_country "unique" "CAN"
-add_excluded_country "unique" "TWN"
-add_excluded_country "unique" "USA"
-add_excluded_country "blockworlds" "RUS"
-add_excluded_country "all" "BRA"
-add_excluded_country "all" "CHL"
-add_excluded_country "all" "USA"
-add_excluded_country "all" "RUS"
-add_excluded_country "all" "FRA"
-add_excluded_country "nobyfng" "ZAF"
-add_excluded_country "nobyfng" "KOR"
-add_excluded_country "nobyfng" "TWN"
-add_excluded_country "nobyfng" "CHN"
-add_excluded_country "nobyfng" "USA"
-add_excluded_country "nobyfng" "BRA"
-add_excluded_country "nobyfng" "CHL"
-add_excluded_country "nobyfng" "SGP"
-add_excluded_country "nobyfng" "RUS"
+add_excluded_country "ddnet" "ARG"
+add_excluded_country "ddnet" "KOR"
+add_excluded_country "ddnet" "TWN"
+add_excluded_country "ddnet" "ZAF"
+add_excluded_country "ddnet" "BRA"
 add_excluded_country "ddnet" "IRN"
-add_excluded_country "ddnet" "USA"
 add_excluded_country "ddnet" "CHN"
+add_excluded_country "ddnet" "USA"
 add_excluded_country "ddnet" "RUS"
 add_excluded_country "ddnet" "SGP"
 add_excluded_country "ddnet" "TUR"
@@ -155,26 +142,39 @@ add_excluded_country "ddnet" "IND"
 add_excluded_country "ddnet" "CHL"
 add_excluded_country "ddnet" "AUS"
 add_excluded_country "ddnet" "BHR"
-add_excluded_country "ddnet" "KOR"
-add_excluded_country "ddnet" "ARG"
-add_excluded_country "ddnet" "TWN"
-add_excluded_country "ddnet" "ZAF"
-add_excluded_country "ddnet" "BRA"
+add_excluded_country "nobyfng" "RUS"
+add_excluded_country "nobyfng" "SGP"
+add_excluded_country "nobyfng" "CHL"
+add_excluded_country "nobyfng" "BRA"
+add_excluded_country "nobyfng" "USA"
+add_excluded_country "nobyfng" "CHN"
+add_excluded_country "nobyfng" "TWN"
+add_excluded_country "nobyfng" "KOR"
+add_excluded_country "nobyfng" "ZAF"
+add_excluded_country "all" "FRA"
+add_excluded_country "all" "RUS"
+add_excluded_country "all" "USA"
+add_excluded_country "all" "CHL"
+add_excluded_country "all" "BRA"
+add_excluded_country "blockworlds" "RUS"
+add_excluded_country "unique" "USA"
+add_excluded_country "unique" "TWN"
+add_excluded_country "unique" "CAN"
+add_excluded_type "ddnet" "Test"
+add_excluded_type "ddnet" "Bomb"
+add_excluded_type "ddnet" "Infection"
 add_excluded_type "ddnet" "Monster"
 add_excluded_type "ddnet" "FNG"
 add_excluded_type "ddnet" "TeeSmash"
+add_excluded_type "ddnet" "Foot"
+add_excluded_type "ddnet" "TeeWare"
+add_excluded_type "ddnet" "xPanic"
 add_excluded_type "ddnet" "Block"
 add_excluded_type "ddnet" "gCTF"
 add_excluded_type "ddnet" "Tutorial"
 add_excluded_type "ddnet" "iCTF"
-add_excluded_type "ddnet" "zCatch"
 add_excluded_type "ddnet" "Vanilla"
-add_excluded_type "ddnet" "Test"
-add_excluded_type "ddnet" "Infection"
-add_excluded_type "ddnet" "Bomb"
-add_excluded_type "ddnet" "TeeWare"
-add_excluded_type "ddnet" "Foot"
-add_excluded_type "ddnet" "xPanic"
+add_excluded_type "ddnet" "zCatch"
 add_favorite 176.9.114.238:8297
 add_friend "Sir Skeleton" "Kng!"
 add_friend "ania" ""
